--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -36,6 +36,15 @@ dependencies:
   cupertino_icons: ^1.0.2
   json_annotation: ^4.3.0
   http: any
+  shimmer: ^2.0.0
+  get_storage: ^2.0.3
+  get: ^4.6.5
+  carousel_slider: ^4.1.1
+  cached_network_image: ^3.2.2
+  flutter_polyline_points: ^1.0.0
+  google_maps_flutter: ^2.2.0
+  location: ^4.4.0
+  flutter_svg: ^1.1.5
 
 dev_dependencies:
   flutter_test:
