--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   location: ^4.4.0
   flutter_svg: ^1.1.5
   flutter_staggered_grid_view: ^0.6.2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
